--- a/.eslintrc
+++ b/.eslintrc
@@ -77,7 +77,8 @@
     "class-methods-use-this": 0,
     "arrow-parens": 0,
     "import/no-mutable-exports": 0,
-    "indent": 0
+    "indent": 0,
+    "no-multiple-empty-lines": 0
   },
   "parserOptions": {
     "ecmaFeatures": {
