--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "redux-persist": "4.10.2",
     "rn-fetch-blob": "^0.10.13",
     "rn-placeholder": "^1.2.0",
-    "victory-native": "^30.4.0"
+    "victory-native": "30.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
