--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "react-native-sentry": "^0.39.0",
     "react-native-shimmer": "^0.3.2",
     "react-native-splash-screen": "^3.1.1",
-    "react-native-svg": "^7.0.2",
+    "react-native-svg": "6.5.2",
     "react-native-swiper": "^1.5.13",
     "react-native-tab-view": "^1.0.2",
     "react-native-vector-icons": "^5.0.0",
