--- a/ios/nodecap/Info.plist
+++ b/ios/nodecap/Info.plist
@@ -76,6 +76,7 @@
 		<string>FontAwesome5_Brands.ttf</string>
 		<string>FontAwesome5_Regular.ttf</string>
 		<string>FontAwesome5_Solid.ttf</string>
+		<string>AntDesign.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
