--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
     "bignumber.js": "^7.2.1",
+    "compare-versions": "^3.4.0",
     "dva-core": "^1.4.0",
     "dva-loading": "^2.0.5",
     "fbemitter": "^2.1.1",
