--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jpush-react-native": "^2.2.11",
     "lodash-decorators": "^6.0.0",
     "moment": "^2.22.2",
+    "query-string": "^6.2.0",
     "ramda": "^0.25.0",
     "rc-form": "^2.2.5",
     "react": "16.3.1",
