--- a/ios/nodecap/Info.plist
+++ b/ios/nodecap/Info.plist
@@ -58,7 +58,7 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Hotnode 需要您的同意, 才能使用相机</string>
+	<string>用以上传和发送照片以便审核</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Hotnode 需要您的同意, 才能读取定位信息</string>
 	<key>NSMicrophoneUsageDescription</key>
