--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "react-native-progress": "^3.5.0",
     "react-native-read-more-text": "^1.1.0",
     "react-native-scrollable-tab-view": "^0.9.0",
-    "react-native-sentry": "^0.39.1",
+    "react-native-sentry": "0.38.3",
     "react-native-shimmer": "^0.4.1",
     "react-native-splash-screen": "^3.1.1",
     "react-native-svg": "6.5.2",
