--- a/package.json
+++ b/package.json
@@ -74,19 +74,19 @@
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
     "react-native-read-more-text": "^1.1.0",
-    "react-native-scrollable-tab-view": "^0.9.0",
+    "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-sentry": "0.38.3",
     "react-native-shimmer": "^0.4.1",
     "react-native-splash-screen": "^3.1.1",
     "react-native-svg": "6.5.2",
     "react-native-swiper": "^1.5.13",
-    "react-native-tab-view": "^1.2.0",
+    "react-native-tab-view": "^1.3.0",
     "react-native-vector-icons": "^6.0.2",
     "react-native-view-shot": "^2.5.0",
     "react-native-wechat": "^1.9.10",
-    "react-navigation": "2.2.5",
-    "react-navigation-redux-helpers": "^1.1.2",
-    "react-redux": "^5.1.0",
+    "react-navigation": "^2.18.2",
+    "react-navigation-redux-helpers": "^2.0.8",
+    "react-redux": "^5.1.1",
     "realm": "^2.18.0",
     "recompose": "^0.30.0",
     "redux-persist": "4.10.2",
