--- a/package.json
+++ b/package.json
@@ -87,12 +87,12 @@
     "react-navigation": "^2.18.2",
     "react-navigation-redux-helpers": "^2.0.8",
     "react-redux": "^5.1.1",
-    "realm": "^2.18.0",
+    "realm": "^2.19.0",
     "recompose": "^0.30.0",
     "redux-persist": "4.10.2",
     "rn-fetch-blob": "^0.10.13",
     "rn-placeholder": "^1.3.0",
-    "victory-native": "30.3.0"
+    "victory-native": "^31.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
