--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-native-easy-grid": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-exit-app": "^1.0.0",
-    "react-native-global-props": "^1.1.5",
+    "react-native-global-props": "1.1.3",
     "react-native-image-picker": "^0.27.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
