--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-exit-app": "^1.0.0",
     "react-native-fade-in-image": "^1.4.1",
+    "react-native-gifted-chat": "^0.5.0",
     "react-native-global-props": "1.1.3",
     "react-native-image-picker": "^0.27.1",
     "react-native-iphone-x-helper": "^1.2.0",
